--- a/paper.tex
+++ b/paper.tex
@@ -226,7 +226,7 @@ problems  related to  high-dimensional  feature  spaces. The  feature
 selection methods are detailed in Section~\ref{sec:selection}. Then, an
 efficient         implementation        is         presented        in
 Section~\ref{sec:implementation}.  Experimental  results on  two  real
-high dimensional data-sets are given Section~\ref{sec:test}. Conclusion
+high dimensional datasets are given Section~\ref{sec:test}. Conclusion
 and perspectives conclude the paper in Section~\ref{sec:conclusion}.
 
 \section{Gaussian Mixture Models in high dimensional spaces}
@@ -830,9 +830,9 @@ otbcli_PredictGMMApp -in hyper.tif \
     of image  size. The Figure~\ref{fig:otb:ffs} shows  a code excerpt
     to run the application.
 
-\section{Data-sets}
+\section{Datasets}
 \label{sec:datasets}
-Numerical experiments have been  conducted on two different data-sets.
+Numerical experiments have been  conducted on two different datasets.
 The  first  one,  called  \emph{Aisa}, is  an  airborne  hyperspectral
 dataset  and  the  second,  called \emph{Potsdam},  is  an  very  high
 resolution multispectral airborne image.
